--- a/index.css
+++ b/index.css
@@ -1,3 +1,41 @@
+/* Estilos responsivos */
+@media (max-width: 1024px) {
+    .container_link, .container_button {
+        display: none;
+    }
+
+    .menu-button {
+        display: block;
+        padding: 10px 20px;
+        background-color: #007BFF;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 16px;
+        text-align: center;
+        width: 100%;
+    }
+
+    .menu-content {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        background-color: #f8f9fa;
+        border-top: 1px solid #ddd;
+    }
+
+    .menu-content a {
+        padding: 10px 0;
+        width: 100%;
+        text-align: center;
+        text-decoration: none;
+        color: #007BFF;
+        font-weight: bold;
+        border-bottom: 1px solid #ddd;
+    }
+}
 body {
     margin: 0;
     font-family: Arial, sans-serif;
@@ -56,42 +94,21 @@ h1 {
     font-size: 2rem; /* Ajuste de tamaño de fuente responsive */
     margin: 0;
 }
-
-/* Estilos responsivos */
-@media (max-width: 768px) {
-    .container_link, .container_button {
-        display: none;
-    }
-
-    .menu-button {
-        display: block;
-        padding: 10px 20px;
-        background-color: #007BFF;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        font-size: 16px;
-        text-align: center;
-        width: 100%;
-    }
-
-    .menu-content {
-        display: none;
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-        background-color: #f8f9fa;
-        border-top: 1px solid #ddd;
-    }
-
-    .menu-content a {
-        padding: 10px 0;
-        width: 100%;
-        text-align: center;
-        text-decoration: none;
-        color: #007BFF;
-        font-weight: bold;
-        border-bottom: 1px solid #ddd;
-    }
+.container_body{
+    background-color: grey;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
 }
+.container_foto{
+    flex: 1;
+    text-align: left;
+    margin: 0;
+}
+.container_foto img{
+    width: 10rem;
+    height: 10rem;
+    border-radius: 100%;
+}
+
