--- a/index.css
+++ b/index.css
@@ -35,6 +35,24 @@
         font-weight: bold;
         border-bottom: 1px solid #ddd;
     }
+    .container_body{
+        background-color: grey;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: space-between;
+    }
+    .container_foto{
+        flex: 1;
+        text-align: left;
+        margin: 0;
+    }
+    .container_foto img{
+        width: 2rem;
+        height: 5rem;
+        border-radius: 100%;
+    }
+    
 }
 body {
     margin: 0;
