--- a/index.css
+++ b/index.css
@@ -35,30 +35,11 @@
         font-weight: bold;
         border-bottom: 1px solid #ddd;
     }
-    .container_body{
-        background-color: grey;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: space-between;
-    }
-    .container_foto{
-        flex: 1;
-        text-align: left;
-        margin: 0;
-    }
-    .container_foto img{
-        width: 2rem;
-        height: 5rem;
-        border-radius: 100%;
-    }
-    
 }
 body {
     margin: 0;
     font-family: Arial, sans-serif;
 }
-
 nav {
     display: flex;
     justify-content: space-between;
@@ -69,30 +50,25 @@ nav {
     width: 100%;
     box-sizing: border-box;
 }
-
 .container_nombre {
     flex: 1;
     text-align: left;
 }
-
 .container_link {
     flex: 2;
     display: flex;
     justify-content: center;
     gap: 20px;
 }
-
 .container_link a {
     text-decoration: none;
     color: #007BFF;
     font-weight: bold;
 }
-
 .container_button {
     flex: 1;
     text-align: right;
 }
-
 .container_button button {
     padding: 10px 20px;
     background-color: #007BFF;
@@ -103,30 +79,34 @@ nav {
     font-size: 16px;
     transition: background-color 0.3s;
 }
-
 .container_button button:hover {
     background-color: #0056b3;
 }
-
 h1 {
     font-size: 2rem; /* Ajuste de tamaño de fuente responsive */
     margin: 0;
 }
-.container_body{
-    background-color: grey;
-    width: 100%;
-    height: 100%;
+.container_body {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 20px;
+    box-sizing: border-box;
 }
-.container_foto{
+.container_foto {
+    order: 2;
     flex: 1;
-    text-align: left;
-    margin: 0;
+    text-align: right;
 }
 .container_foto img{
-    width: 10rem;
-    height: 10rem;
+    max-width: 100%;
+    height: auto;
     border-radius: 100%;
+}
+.container_presentacion {
+   order: 1;
+    flex: 2;
+    text-align: left;
 }
 
