--- a/index.css
+++ b/index.css
@@ -47,6 +47,7 @@
         margin: 10px 0;
     }
 }
+
 body {
     margin: 0;
     font-family: Arial, sans-serif;
@@ -116,14 +117,25 @@ h1 {
     border-radius: 100%;
 }
 .container_presentacion {
-   order: 1;
+    order: 1;
     flex: 2;
     text-align: left;
-    
 }
-.container_presentacion h1{
- margin-bottom: 25px;       
+.container_presentacion h1, .container_presentacion h2 {
+    margin: 0;
 }
-.container_presentacion h3{
+.container_about {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.about{
+    margin-left: 15px;
+}
+.about h2 {
+    margin-left: 5rem;
+    margin-bottom: 0;
+}
+.about h3 {
     margin: 0;
 }
