--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    background-color: #f8f9fa;
+    background-color: grey;
     border-bottom: 1px solid #ddd;
     width: 100%;
     box-sizing: border-box;
@@ -143,7 +143,7 @@ h1 {
     padding-right: 10rem;
     padding-left: 2rem;
 }
-.container_residencia {
+.container_pais {
     display: flex;
     margin-bottom: 0.4rem;
     border-radius: 10px;
@@ -153,12 +153,25 @@ h1 {
     padding-bottom: 0.5rem;
     border: 2px silver solid;
 }
+.pais {
+    padding-right: 4rem;
+}
+.container_residencia {
+    display: flex;
+    background-color: #DCD9D8;
+    margin-bottom: 0.4rem;
+    border-radius: 10px;
+    padding-left: 0.3rem;
+    padding-right: 2rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+}
 .residencia {
     padding-right: 1.2rem;
 }
 .container_direccion {
     display: flex;
-    background-color: #DCD9D8;
+    border: 2px silver solid;
     margin-bottom: 0.4rem;
     border-radius: 10px;
     padding-left: 0.3rem;
@@ -171,7 +184,7 @@ h1 {
 }
 .container_correo {
     display: flex;
-    border: 2px silver solid;
+    background-color: #DCD9D8;
     margin-bottom: 0.4rem;
     border-radius: 10px;
     padding-left: 0.3rem;
@@ -184,7 +197,7 @@ h1 {
 }
 .container_telefono {
     display: flex;
-    background-color: #DCD9D8;
+    border: 2px silver solid;
     margin-bottom: 0.4rem;
     border-radius: 10px;
     padding-left: 0.3rem;
