--- a/index.css
+++ b/index.css
@@ -309,13 +309,18 @@ h1 {
     }
     .container_about {
         flex-direction: column;
-        align-items: flex-start;
+        justify-content: center;
     }
     .about h2{
         margin-left: 30%;
     }
     .about h3 {
         margin-left: 5%;
+    }
+    .valores {
+        flex-direction: column;
+        justify-content: center;
+        padding-left: 7%;
     }
     .valores .h2 {
       margin-left: 30%;
