--- a/Economica/index.css
+++ b/Economica/index.css
@@ -5,13 +5,13 @@ body {
     justify-content: center;
     align-items: center;
     background-color: #ccc;
-    padding: 20%;
+    padding: 10rem;
 }
 .container {
     background-color: white;
     padding-top: 10%;
     padding-bottom: 55px;
-    padding-right: 25px;
+    padding-right: 10%;
     padding-left: 10%;
     border-radius: 15px;
     border: 1px black solid;
@@ -27,10 +27,12 @@ form {
     height: 25rem;
 }
 form img {
+    padding-left: 18%;
     width: 10rem;
     height: 10rem;
 }
 form h3 {
+    padding-left: 18%;
     margin-top: -20px;
 }
 .container_usuario {
@@ -76,9 +78,27 @@ form h3 {
     color: #666;
 }
 a {
+    padding-left: 18%;
     text-decoration: none;
     color:inherit;
 }
 .container_button{
-    margin-top: 15px;
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.ingresar{
+    margin: 25px;
+    padding: 10px 50px;
+    border-radius: 15px;
+    border: #ccc 1px solid;
+    cursor: pointer;
+}
+.registrarse {
+    margin-top: -25px;
+    padding: 10px 40px;
+    border-radius: 15px;
+    border: #ccc 1px solid;
+    cursor: pointer;
 }
