--- a/Economica/index.css
+++ b/Economica/index.css
@@ -5,7 +5,7 @@ body {
     justify-content: center;
     align-items: center;
     background-color: #ccc;
-    padding: 10rem;
+    padding: 10%;
 }
 .container {
     background-color: white;
