--- a/index.css
+++ b/index.css
@@ -248,6 +248,19 @@ h1 {
     text-align: center;
     border: 5px #ccc solid;
 }
+.containerButton {
+    margin-top: 1.2rem;
+    margin-bottom: 1.2rem;
+}
+.containerButton button {
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    border: #ccc 1px solid;
+    border-radius: 25px;
+    cursor: pointer;
+}
 .experiencia {
     text-align: center;
 }
@@ -366,6 +379,7 @@ h1 {
         text-align: center;
         grid-template-columns: 1fr;
     } 
+
     .experiencia h1 {
         text-align: center;
         margin-bottom: 1rem;
