--- a/Economica/frutas/display.css
+++ b/Economica/frutas/display.css
@@ -11,7 +11,7 @@ body{
     background-position: center;
 }
 .sidebar {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 80px;
