--- a/index.css
+++ b/index.css
@@ -5,11 +5,12 @@
     --azul: #37435B;
 }
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
-*body{
+body{
     margin: 0;
     padding: 0;
     border: 0;
     height: 100vh;
+    background: var(--durazno);
 }
 .container-image{
     height: 25rem;
@@ -42,7 +43,7 @@
     left: 30%;
 }
 .container-invitados {
-    margin-top: 5px;
+    margin-top: 1px;
 }
 .container-invitados h1{
   color: var(--azul);
@@ -62,13 +63,14 @@
     margin-bottom: 2rem;  
 }
 .countdown {
-    display: flex;
-    gap: 20px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
 }
 .container-days{
     background: var(--durazno);
     color:var(--azul);
-    margin-left: 3rem;
+    margin-left: 0.5rem;
     padding: 10px;
     border-radius: 100%;
     text-align: center;
@@ -98,10 +100,21 @@
 .container-seconds{
     background: var(--durazno);
     color:var(--azul);
-    margin-left: .5rem;
+    margin-right: 0.5rem;
     padding: 10px 15px 10px 15px;
     border-radius: 100%;
     text-align: center;
     border: 2px solid;
     border-color: var(--verde);
+}
+.dias, .horas, .minutos, .segundos{
+    margin-top: 2px;
+    text-align: center;
+    font-size: 1.2rem;
+    color: var(--azul);
+}
+.container-ring{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
