--- a/index.css
+++ b/index.css
@@ -117,4 +117,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 50px;
+    width: 100%;
+    height: 100px;
 }
