--- a/index.css
+++ b/index.css
@@ -117,7 +117,17 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 50px;
+    margin-top: 10px;
     width: 100%;
     height: 100px;
 }
+.container-ceremonia{
+    display: flex;
+    justify-content: center;
+    color: var(--azul);
+}
+.container-ceremonia .ceremonia{
+    font-size: 30px;
+    font-weight: bold;
+}
+
