--- a/index.css
+++ b/index.css
@@ -182,4 +182,29 @@ body{
     width: 100%;
     height: 100px;
 }
+.container-foto{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    text-align: center;
+    margin-top: 10px;
+    width: 100%;
+    height: 25rem;
+    background-color: var(--salmon);
+}
+.foto{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    width: 100%;
+    height: 100px;
+}
+.container-foto h1{
+    margin-top: -30px;
+    margin-bottom: 0;
+}
+.container-foto h3{
+    margin-top: -60px;
+    margin-bottom: 0;
+}
 
