--- a/index.css
+++ b/index.css
@@ -252,4 +252,19 @@ body{
     width: 100%;
     height: 100%;
 }
+.imagenes img:nth-child(1)
+{
+    height: 70%;
+}
+.imagenes img:nth-child(2){
+    width: 100%;
+    height:15rem;
+}
+.imagenes img:nth-child(3){
+    height: 150%;
+    margin-top: -4.5rem;
+}
+.imagenes img:nth-child(4){
+    height: 100%;
+}
 
