--- a/index.css
+++ b/index.css
@@ -245,7 +245,6 @@ body{
     display: grid;
     grid-template-columns: repeat(2,1fr);
     width: 20rem;
-    height: 5rem;
     gap: 10px;
 }
 .imagenes img {
@@ -265,6 +264,43 @@ body{
     margin-top: -4.5rem;
 }
 .imagenes img:nth-child(4){
-    height: 100%;
+    height: 103%;
 }
-
+.container-regalo{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    margin-top: 0;
+}
+.regalo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    width: 100%;
+    height: 100px;
+}
+.container-regalo h2{
+    margin-top: 0;
+    margin-bottom: 5px;
+}
+.container-regalo h4{
+    margin-top: 0;
+    margin-bottom: 2px;
+}
+.container-despedida{
+    font-family: "Great Vibes", cursive;
+    font-weight: 500;
+    font-style: normal;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+.container-despedida h1{
+    font-size: 60px;
+    margin-bottom: 0;
+}
+.container-despedida h3{
+    font-size: 30px;
+}
