--- a/index.css
+++ b/index.css
@@ -253,29 +253,32 @@ body{
 .imagenes{
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    width: 20rem;
+    width: 100%;
+    max-width: 20rem;
     gap: 10px;
 }
 .imagenes img {
     width: 100%;
-    height: 100%;
-    margin-left: 5px;
+    height: auto;
+    margin-left: 0;
 }
 .imagenes img:nth-child(1)
 {
-    height: 70%;
+    height: auto;
 }
 .imagenes img:nth-child(2){
     width: 100%;
     height: 15rem;
 }
 .imagenes img:nth-child(3){
-    height: 130%;
-    margin-top: -4.5rem;
+    height: auto;
+    margin-top: 0;
 }
 .imagenes img:nth-child(4){
-    height: 103%;
+    margin-top: -6.5rem;
+    height: 16.2rem;
 }
+
 .container-regalo{
     display: flex;
     flex-direction: column;
