--- a/index.css
+++ b/index.css
@@ -268,7 +268,7 @@ body{
 }
 .imagenes img:nth-child(2){
     width: 100%;
-    height: 240px;
+    height: auto;
 }
 .imagenes img:nth-child(3){
     height: auto;
