--- a/index.css
+++ b/index.css
@@ -20,16 +20,17 @@ body{
     display: inline-block;
 }
 .container-image img{
-    height: 100%;
+    height: auto;
     width: 100%;
 }
 .container-image h2, .container-image h3 {
     position: absolute;
+    margin-top: 50px;
     color: white;
     text-shadow: 2px 2px 4px rgb(0, 0, 0, 0.5);
 }
 .container-image h2 {
-    margin-top: 5px;
+    margin-top: 40px;
     top: 1px;
     left: 27%;
     font-family: "Great Vibes", cursive;
@@ -264,21 +265,31 @@ body{
 }
 .imagenes img:nth-child(1)
 {
-    height: auto;
+    height: 230px;
 }
 .imagenes img:nth-child(2){
     width: 100%;
-    height: 240px;
+    height: 300px;
 }
 .imagenes img:nth-child(3){
-    height: auto;
-    margin-top: 0;
+    height: 300px;
+    margin-top: -70px;
 }
 .imagenes img:nth-child(4){
-    margin-top: -6.5rem;
     height: 16.2rem;
 }
+.imagenes img:nth-child(5){
+    margin-top: -30px;
+    height: 230px;
 
+}
+.imagenes img:nth-child(6){
+    height: 300px;
+}
+.imagenes img:nth-child(7) {
+    margin-top: -100px;
+    height: 308px;
+}
 .container-regalo{
     display: flex;
     flex-direction: column;
