--- a/index.css
+++ b/index.css
@@ -276,19 +276,22 @@ body{
     margin-top: -70px;
 }
 .imagenes img:nth-child(4){
-    height: 16.2rem;
+    height: 300px;
 }
 .imagenes img:nth-child(5){
-    margin-top: -30px;
-    height: 230px;
+    margin-top: -70px;
+    height: 300px;
 
 }
 .imagenes img:nth-child(6){
     height: 300px;
 }
 .imagenes img:nth-child(7) {
-    margin-top: -100px;
-    height: 308px;
+    margin-top: -65px;
+    height: 300px;
+}
+.imagenes img:nth-child(8) {
+    height: 235px;
 }
 .container-regalo{
     display: flex;
